# QueueOverflow

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  cypress-tsconfig.json  cypress.config.ts  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
cypress/: tsconfig.json
cypress/e2e/: basic.cy.ts  login-test.cy.ts  login-with-page-object.cy.ts  login-workflow.cy.ts  question-answer-detail.cy.ts  question-answer.cy.ts  question-test.cy.ts
cypress/support/: commands.ts  e2e.ts  types.d.ts
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
src/: App.css  App.tsx  main.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/entities/: answers.rs  bookmarks.rs  comments.rs  mod.rs  prelude.rs  question_tags.rs  questions.rs  tags.rs  users.rs  votes.rs
src-tauri/migration/src/: lib.rs  m20250313_030734_create_users.rs  m20250313_030738_create_questions.rs  m20250313_030743_create_answers.rs  m20250313_030756_create_comments.rs  m20250313_030800_create_tags.rs  m20250313_030810_create_question_tags.rs  m20250313_030821_create_votes.rs  m20250313_030840_create_bookmarks.rs
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/handlers/: answer_handlers.rs  bookmark_handlers.rs  comment_handlers.rs  mod.rs  question_handlers.rs  tag_handlers.rs  user_handlers.rs  vote_handlers.rs
src-tauri/src/models/: answer_models.rs  bookmark_models.rs  comment_models.rs  mod.rs  question_models.rs  tag_models.rs  user_models.rs  vote_models.rs
src-tauri/src/repository/: answer_repository.rs  bookmark_repository.rs  comment_repository.rs  mod.rs  question_repository.rs  tag_repository.rs  user_repository.rs  vote_repository.rs
src/api/: answer-api.ts  bookmark-api.ts  comment-api.ts  index.ts  question-api.ts  tag-api.ts  tauri-utils.ts  user-api.ts  vote-api.ts
src/components/: answer-editor.tsx  code-block.tsx  header.tsx  question-cards.tsx  rich-text-editor.css  rich-text-editor.tsx  side-bar.tsx  toast.tsx
src/mocks/: data.ts  dummyData.ts
src/pages/: ask-question.tsx  change-password.tsx  edit-profile.tsx  home.tsx  login.tsx  (+4 more)
(+15 files in other folders)
