[package]
name = "react-tauri-template"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "react_tauri_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
tauri = { version = "2.3.1", features = [] }
tauri-plugin-opener = "2.2.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sea-orm = { version = "1.1.7", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1.44.0", features = ["full"] }
toml = "0.8"
sea-orm-migration = { version = "1.1.7", features = ["runtime-tokio-native-tls", "sqlx-postgres", "sqlx-mysql"] }
dotenv = "0.15.0"
