[package]
name = "react-tauri-template"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "react_tauri_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = ["config-toml"] }

[dependencies]
tauri = { version = "2.3.1", features = ["config-toml"] }
tauri-plugin-opener = "2.2.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sea-orm = { version = "1.1.7", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.44.0", features = ["full"] }
toml = "0.8"
sea-orm-migration = { version = "1.1.7", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
argon2 = "0.5"
jsonwebtoken = "8.3"
rand_core = "0.6"
chrono = "0.4"
anyhow = "1.0"
migration = { path = "migration" }

[features]
custom-protocol = ["tauri/custom-protocol"]
